# feather

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  example.cpp  example.py  main.cpp  requirements.txt  setup.py  vcpkg.json
.github/workflows/: cmake.yml  python-manylinux-package.yml  python-manylinux-package.yml.bak  python-package.yml  python-publish.yml
bindings/python/: CMakeLists.txt  FeaHash_pybind.h  FeaSlot_pybind.h  LibsvmExtractor_pybind.h
bindings/python/src/: FeaHash_pybind.cpp  FeaSlot_pybind.cpp  LibsvmExtractor_pybind.cpp  pymodule.cpp
conf/: feather.conf
docs/: how_feature_hash_works.md
examples/cpp/: CMakeLists.txt
examples/python/: fea_hash.py  libsvm_extractpr.py
include/feather/: BiDict.h  FeaExtractor.h  FeaHash.h  FeaSlot.h  FeaValue.h  LibsvmExtractor.h  logger.h  utils.h
include/feather/pybind/: FeaHash_pybind.h  FeaSlot_pybind.h
src/: BiDict.cpp  FeaHash.cpp  FeaSlot.cpp  FeaValue.cpp  LibsvmExtractor.cpp  pymodule.cpp
src/pybind/: FeaHash_pybind.cpp  FeaSlot_pybind.cpp  LibsvmExtractor_pybind.cpp  pymodule.cpp
test/cpp/: CMakeLists.txt  test.cpp
test/cpp/cases/: BiDict_test.h  FeaHash_test.h  FeaSlot_test.h  FeaValue_test.h  LibsvmExtractor_test.h  utils_test.h
test/cpp/common/: constants.h  test_helper.h
test/python/: dev_test.py  feahash_test.py  run_test.py  test.py
